test/WIP/gatewayapi/httproute-kwirth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kwirth-route
  namespace: kwirth
  labels:
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: my-gateway # name of the gateway
      namespace: gateway-namespace # namespace of the gateway
  hostnames:
    - "localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kwirth
      backendRefs:
        - name: kwirth-svc
          port: 3883
