test/WIP/gatewayapi/notes.txt
helm install eg oci://docker.io/envoyproxy/gateway-helm --version v0.0.0-latest -n envoy-gateway-system --create-namespace

helm uninstall eg -n envoy-gateway-system
